Added sweep parameters

--- a/DR10.ipynb
+++ b/DR10.ipynb
@@ -304,70 +304,68 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d603eac4-6c51-4927-8c4f-59fc3b48f4d3",
+   "id": "e2ef8d87-87d0-4c88-a044-2da338e40354",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lrg_file = os.path.expandvars(\"$PSCRATCH/data/monocle/LRGs/lensed_LRGs.dat\")\n",
-    "command_file = os.path.expandvars(\"$PSCRATCH/data/monocle/LRGs/lensed_LRG_job.sl\")\n",
-    "\n",
-    "header = \"\"\"#!/bin/bash\n",
-    "#SBATCH -C cpu\n",
-    "#SBATCH -N 1\n",
-    "#SBATCH --licenses=cfs,SCRATCH\n",
-    "#SBATCH -q regular\n",
-    "#SBATCH -t 20:00:00\n",
-    "#SBATCH -A m2218\n",
-    "#SBATCH --image=eramey16/monocle:latest --volume=/pscratch/sd/e/eramey16/data/monocle/LRGs:/monocle/exports\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "lrgs = pd.read_csv(lrg_file)\n",
-    "stmt = \"srun -n 32 shifter python $HOME/galactic_lenses/docker/classify.py -t lensed_LRG --train -tn lrg_train -l \"\n",
-    "lrg_commands = stmt + lrgs.ls_id.astype(str)\n",
-    "# num_files = int(len(lrg_commands)/25)\n",
-    "# idxs = np.linspace(0, len(lrg_commands), num_files+1).astype(int)\n",
-    "# for i in range(num_files):\n",
-    "#     short_commands = lrg_commands.iloc[idxs[i]:idxs[i+1]]\n",
-    "    # short_commands.to_csv(command_file+f\"_{i}.sh\", index=False, header=False)\n",
-    "# lrg_commands.to_csv(command_file, index=False, header=False)\n",
-    "# with open(command_file, 'w') as file:\n",
-    "#     file.write(header+'\\n'.join(lrg_commands))"
+    "def remove_duplicates(classy, ls_ids, tbl_name, tag):\n",
+    "    with classy.engine.connect() as conn:\n",
+    "        bk_tbl = sa.Table(classify.BKTBL, classy.meta, autoload_with=classy.engine)\n",
+    "        gal_tbl = sa.Table(tbl_name, classy.meta, autoload_with=classy.engine)\n",
+    "        for ls_id in ls_ids:\n",
+    "            try:\n",
+    "                _ = classy.get_galaxy(ls_id, tag=tag)\n",
+    "            except ValueError as e:\n",
+    "                print(f\"Removing galaxy {ls_id}\")\n",
+    "                stmt = sa.delete(bk_tbl).where(bk_tbl.c.ls_id==ls_id).where(bk_tbl.c.tag==tag)\n",
+    "                conn.execute(stmt)\n",
+    "                stmt = sa.delete(gal_tbl).where(gal_tbl.c.ls_id==ls_id)\n",
+    "                conn.execute(stmt)\n",
+    "        conn.commit()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f9987fbf-0c07-4176-b77b-623a131aa3b1",
+   "id": "d603eac4-6c51-4927-8c4f-59fc3b48f4d3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to start MPI; are mpi4py and schwimmbad installed?Proceeding without MPI.\n",
-      "Message: libmpi.so.12: cannot open shared object file: No such file or directory\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[0;32m/global/u1/e/eramey16/galactic_lenses/docker/classify.py:86\u001b[0m, in \u001b[0;36mClassifier.parallel_setup\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmpi4py\u001b[39;00m\n\u001b[0;32m---> 86\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmpi4py\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MPI\n\u001b[1;32m     87\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mschwimmbad\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MPIPool\n",
-      "\u001b[0;31mImportError\u001b[0m: libmpi.so.12: cannot open shared object file: No such file or directory",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m classy \u001b[38;5;241m=\u001b[39m \u001b[43mclassify\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mClassifier\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m unused_lsids \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ls_id \u001b[38;5;129;01min\u001b[39;00m lrgs\u001b[38;5;241m.\u001b[39mls_id:\n",
-      "File \u001b[0;32m/global/u1/e/eramey16/galactic_lenses/docker/classify.py:69\u001b[0m, in \u001b[0;36mClassifier.__init__\u001b[0;34m(self, output_dir, gal_df, trac_table, phot_table, query_cols, engine, prosp_package, code_dir, logger)\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgal_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame() \u001b[38;5;66;03m# column names?\u001b[39;00m\n\u001b[0;32m---> 69\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparallel_setup\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m engine \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwithmpi \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrank\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mengine \u001b[38;5;241m=\u001b[39m sa\u001b[38;5;241m.\u001b[39mcreate_engine(util\u001b[38;5;241m.\u001b[39mconn_string, poolclass\u001b[38;5;241m=\u001b[39mNullPool, future\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "File \u001b[0;32m/global/u1/e/eramey16/galactic_lenses/docker/classify.py:108\u001b[0m, in \u001b[0;36mClassifier.parallel_setup\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrank \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    107\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcomm \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 108\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;241m=\u001b[39m \u001b[43mtime\u001b[49m\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwithmpi\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
+      "4\n",
+      "['10995399593558932', '10995390873600264', '10995297628983076', '10995404289082576']\n"
      ]
     }
    ],
    "source": [
+    "lrg_file = os.path.expandvars(\"$PSCRATCH/data/monocle/LRGs/lensed_LRGs.dat\")\n",
+    "# command_file = os.path.expandvars(\"$PSCRATCH/data/monocle/LRGs/lensed_LRG_job_6_18.sl\")\n",
+    "# command_file = os.path.expandvars(\"$PSCRATCH/data/monocle/LRGs/taskfarmer_galaxies.txt\")\n",
+    "command_file = os.path.expandvars(\"$PSCRATCH/data/monocle/LRGs/gp_run.txt\")\n",
+    "\n",
+    "header = \"\"\"#!/bin/bash\n",
+    "\n",
+    "#SBATCH -C cpu\n",
+    "#SBATCH --nodes=1\n",
+    "#SBATCH --ntasks-per-node=32\n",
+    "#SBATCH --licenses=cfs,SCRATCH\n",
+    "#SBATCH -q regular\n",
+    "#SBATCH -t 20:00:00\n",
+    "#SBATCH -A m2218\n",
+    "\n",
+    "module load python\n",
+    "conda activate myprospector\n",
+    "export SPS_HOME=$HOME/fsps\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "lrgs = pd.read_csv(lrg_file)\n",
+    "# stmt = \"mpirun -n 32 python3 $HOME/galactic_lenses/docker/classify.py -t lensed_LRG --train -tn lrg_train -l \"\n",
+    "# stmt = \"srun python3 $HOME/galactic_lenses/docker/classify.py --massmet_file=/global/homes/e/eramey16/galactic_lenses/docker/gallazzi_05_massmet.txt --output_dir=/pscratch/sd/e/eramey16/data/monocle/LRGs/ -t lensed_LRG --train -tn lrg_train -l \"\n",
+    "stmt = \"python3 $HOME/galactic_lenses/docker/classify.py --massmet_file=/global/homes/e/eramey16/galactic_lenses/docker/gallazzi_05_massmet.txt --output_dir=/pscratch/sd/e/eramey16/data/monocle/LRGs/ -t lensed_LRG --train -tn lrg_train -l \"\n",
     "classy = classify.Classifier()\n",
     "unused_lsids = []\n",
     "for ls_id in lrgs.ls_id:\n",
@@ -376,8 +374,49 @@
     "        if bkdata.stage[0]!=2: unused_lsids.append(ls_id)\n",
     "    except:\n",
     "        unused_lsids.append(ls_id)\n",
-    "len(unused_lsids)"
+    "print(len(unused_lsids))\n",
+    "\n",
+    "lrg_commands = [str(ls_id) for ls_id in unused_lsids]\n",
+    "# lrg_commands = [stmt + str(ls_id) for ls_id in unused_lsids]\n",
+    "# lrg_commands = lrg_commands[100:114]\n",
+    "# lrg_commands = stmt + unused_lsids.ls_id.astype(str)\n",
+    "# num_files = int(len(lrg_commands)/25)\n",
+    "# idxs = np.linspace(0, len(lrg_commands), num_files+1).astype(int)\n",
+    "# for i in range(num_files):\n",
+    "#     short_commands = lrg_commands.iloc[idxs[i]:idxs[i+1]]\n",
+    "    # short_commands.to_csv(command_file+f\"_{i}.sh\", index=False, header=False)\n",
+    "# lrg_commands.to_csv(command_file, index=False, header=False)\n",
+    "# with open(command_file, 'w') as file:\n",
+    "#     # file.write(header+'\\n'.join(lrg_commands))\n",
+    "#     file.write('\\n'.join(lrg_commands))\n",
+    "print(lrg_commands[:5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "30bb1fa8-1eeb-490d-ace4-c47df6428a1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove_duplicates(classy, lrgs.ls_id, 'lrg_train', tag='lensed_LRG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd6b70f-f90e-4fc3-a071-e2c3bef01258",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d01a6b1-920d-4910-b30d-3a88e1105646",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3235,9 +3274,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MyProspector",
+   "display_name": "Astroconda",
    "language": "python",
-   "name": "myprospector"
+   "name": "astroconda"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3249,7 +3288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
